# hello01

./: .gitignore  CLAUDE.md  README.md  curriculum.py  pyproject.toml
code_review/: Dockerfile  README.md  __init__.py  agent.py  app.py  cli.py  config.py  requirements.txt  tools.py
codebase_qa/: Dockerfile  README.md  __init__.py  app.py  cli.py  config.py  generator.py  indexer.py  pipeline.py  requirements.txt  retriever.py
deploy/: Dockerfile  README.md  __init__.py  agent_core.py  app.py  config.py  cost_control.py  infrastructure.py  observability.py  requirements.txt
log_analyzer/: Dockerfile  README.md  __init__.py  agent.py  app.py  cli.py  config.py  parser.py  requirements.txt  tools.py
mcp_server/: README.md  __init__.py  __main__.py  claude_desktop_config.json  config.py  demo_client.py  lifecycle.py  requirements.txt  server.py  tools.py
phase1/: 01_basics.py  02_control_flow.py  03_collections.py  03_exercise_06_my_zip.py  04_exercise_answers.py  04_functions.py  05_classes.py  06_modules_packages.py  07_errors.py  08_demo_data.txt  08_files_json.py  09_async_basics.py  10_pytest_basics.py  README.md  calculator.py  conftest.py  my_utils.py  test_calculator.py
phase2/: 11_llm_api_intro.py  12_prompt_engineering.py  13_structured_output.py  14_streaming.py  15_chat_app.py  README.md
phase3/: 21_embeddings.py  22_vector_db.py  23_document_processing.py  24_retrieval_pipeline.py  25_knowledge_base.py  README.md
phase4/: 31_agent_basics.py  32_tool_use.py  33_planning.py  34_mcp_protocol.py  35_agent_project.py  README.md
phase5/: README.md  (+4 more)
(+42 files in other folders)
